mari-vanna-website/src/App.css
/* ======== styling for Info component ======== */
@import url('https://fonts.googleapis.com/css?family=Lato:300');
@import url("https://p.typekit.net/p.css?s=1&k=gsw5tei&ht=tk&f=5624.5626.5736.5738.5661.5663&a=9521813&app=typekit&e=css");


.info__container {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.info__top-row {
  display: flex;
}

.info__bottom-row {
  display: flex;
}

.info__text-right,
.info__text-left {
  font-size: 18px;
  margin: 49px;
  font-family: 'Lato', sans-serif;
}

.info__text {
  width: 50%;
  height: 476px;
}

.info__doll-image,
.info__storefront-image {
  width: 50%;
  height: 476px;
}

/* HEADER  */

.header {
  display: flex;
  justify-content: space-between;
  background-color: #ee343c;
  color: #ffffff;
  height: 80px;
  line-height: 80px;
  font-size: 22px;
  vertical-align: center;
  font-family: 'p22-underground', sans-serif;
}

.header__title {
  letter-spacing: 10px;
  margin-left: 40px;
}

.header__navbar {
  display: flex;
  margin-right: 45px;
}

a {
  text-decoration: none;
  color: #ffffff;
  margin: 0 25px;
}

/* ======== Dessert ========= */
.dessertpage__container {
  display: flex;
  flex-direction: column;
}

.dessertpage__image {
  width: 100%;
}

.dessertpage__menu {
  display: flex;
  flex-direction: column;
  align-self: center;
  margin-bottom: 120px;
}

.dessertpage__title {
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: bolder;
  margin: 40px;
  text-align: center;
}

.dessertpage__menu-item {
  display: flex;
  align-items: center;
}

.dessertpage__menu-item-bold {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: bold;
}

.dessertpage__menu-item-text {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
} 

